--- a/bathroom-services.html
+++ b/bathroom-services.html
@@ -509,7 +509,7 @@
                     <p class="leading-relaxed mb-6">Professional residential and commercial painting services. We bring
                         color to life with precision, quality, and a 100% satisfaction guarantee.</p>
                     <div class="social-icons flex gap-4">
-                        <a href="#"
+                        <a href="https://web.facebook.com/tdpainters205?_rdc=1&_rdr#"
                             class="w-10 h-10 rounded-full bg-slate-800 flex items-center justify-center text-white hover:bg-brand-blue hover:-translate-y-1 transition border border-slate-700">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
