--- a/kitchen-cabinet-painting.html
+++ b/kitchen-cabinet-painting.html
@@ -312,9 +312,9 @@
                             <div class="pb-6 border-b border-slate-100">
                                 <h4 class="font-bold text-slate-800">Small Kitchen (10-15 doors)</h4>
                                 <div class="flex justify-between items-center mt-2">
-                                    <span class="text-2xl font-bold text-brand-green">Starts at $1,400</span>
+                                    <span class="text-2xl font-bold text-brand-green">Starts at $2,000</span>
                                 </div>
-                                <p class="text-xs text-slate-500 mt-1">Includes professional roller painting on
+                                <p class="text-xs text-slate-500 mt-1">Includes professional spray finish on
                                     doors/drawers.</p>
                             </div>
 
@@ -327,6 +327,16 @@
                                 </div>
                                 <p class="text-xs text-slate-600 mt-1">Our most popular package for a full
                                     transformation.</p>
+                            </div>
+
+
+                            <div class="pb-6 border-b border-slate-100">
+                                <h4 class="font-bold text-slate-800">Small Kitchen (10-15 doors)</h4>
+                                <div class="flex justify-between items-center mt-2">
+                                    <span class="text-2xl font-bold text-brand-green">Starts at $1,400</span>
+                                </div>
+                                <p class="text-xs text-slate-500 mt-1">Includes professional roller painting on
+                                    doors/drawers.</p>
                             </div>
 
                             <div class="pb-6 border-b border-slate-100">
@@ -512,7 +522,7 @@
                     <p class="leading-relaxed mb-6">Professional residential and commercial painting services. We bring
                         color to life with precision, quality, and a 100% satisfaction guarantee.</p>
                     <div class="social-icons flex gap-4">
-                        <a href="#"
+                        <a href="https://web.facebook.com/tdpainters205?_rdc=1&_rdr#"
                             class="w-10 h-10 rounded-full bg-slate-800 flex items-center justify-center text-white hover:bg-brand-blue hover:-translate-y-1 transition border border-slate-700">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
